--- a/src/yan_color.Minecraft_QQ/yan_color.Minecraft_QQ.csproj
+++ b/src/yan_color.Minecraft_QQ/yan_color.Minecraft_QQ.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="logs.cs" />
     <Compile Include="socket.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FormSettings.cs">
@@ -61,7 +62,7 @@
     <Compile Include="FormSettings.Designer.cs">
       <DependentUpon>FormSettings.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyPlugin.cs" />
+    <Compile Include="Minecraft_QQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XML.cs" />
   </ItemGroup>
