更新至1.7.5.0，更新框架

--- a/Publish/conf/CSPlugins.cfg
+++ b/Publish/conf/CSPlugins.cfg
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Plugins>
-  <Plugin Name="Flexlive.CQP.CSharpPlugins.Demo" Status="True"/>
+  <Plugin Name="Minecraft_QQ" Status="True"/>
 </Plugins>
