--- a/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
+++ b/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
@@ -20,15 +20,15 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>..\..\Bin\</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>
     </DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,7 +40,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Flexlive.CQP.Framework">
+    <Reference Include="Flexlive.CQP.Framework, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\Flexlive.CQP.Framework.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data">
@@ -70,20 +71,22 @@
     </Compile>
     <Compile Include="Minecraft_QQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="use.cs" />
     <Compile Include="XML.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormSettings.resx">
       <DependentUpon>FormSettings.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <None Include="Resources\Color_yr.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy  /C /I /R /Y  $(TargetPath) $(TargetDir)CSharpPlugins\
+xcopy  /C /I /R /Y  $(TargetPath) $(SolutionDir)Publish\CSharpPlugins\</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
