--- a/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
+++ b/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Flexlive.CQP.Framework, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
