--- a/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
+++ b/src/Color_yr.Minecraft_QQ/Color_yr.Minecraft_QQ.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="config.cs" />
     <Compile Include="logs.cs" />
+    <Compile Include="message.cs" />
     <Compile Include="Mysql.cs" />
     <Compile Include="socket.cs" />
     <Compile Include="setform.cs">
