--- a/Native.Csharp/packages.config
+++ b/Native.Csharp/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net45" developmentDependency="true" />
   <package id="Fody" version="2.2.1.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
   <package id="ModuleInit.Fody" version="1.7.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="MySql.Data" version="8.0.16" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="Unity" version="5.8.6" targetFramework="net40" />
 </packages>
