--- a/Native.Csharp/packages.config
+++ b/Native.Csharp/packages.config
@@ -5,6 +5,8 @@
   <package id="Fody" version="6.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Google.Protobuf" version="3.10.0" targetFramework="net452" />
   <package id="ModuleInit.Fody" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="MySql.Data" version="8.0.18" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
   <package id="Unity" version="5.8.6" targetFramework="net40" />
 </packages>
