--- a/Native.Csharp/Native.Csharp.csproj
+++ b/Native.Csharp/Native.Csharp.csproj
@@ -182,7 +182,12 @@
     <Compile Include="Minecraft_QQ\config\config_main.cs" />
     <Compile Include="Minecraft_QQ\config\obj.cs" />
     <Compile Include="Minecraft_QQ\config\config_write.cs" />
-    <Compile Include="Minecraft_QQ\Mysql.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql_Add_data.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql_Add_table.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql_remove_data.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql_replace_data.cs" />
+    <Compile Include="Minecraft_QQ\Mysql\Mysql_search_data.cs" />
     <Compile Include="Minecraft_QQ\Send.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repair\Core\Kernel32.cs" />
