--- a/Native.Csharp/packages.config
+++ b/Native.Csharp/packages.config
@@ -8,4 +8,6 @@
   <package id="MySql.Data" version="8.0.18" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
+  <package id="Unity" version="5.11.1" targetFramework="net452" />
 </packages>
