--- a/Native.Csharp/packages.config
+++ b/Native.Csharp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DllExport" version="1.7.0" targetFramework="net452" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net452" />
   <package id="Fody" version="6.1.1" targetFramework="net452" developmentDependency="true" />
