--- a/Minecraft_QQ/packages.config
+++ b/Minecraft_QQ/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.11.4" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.19" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net452" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net452" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net452" />
 </packages>
