--- a/Minecraft_QQ/Minecraft_QQ.Code.csproj
+++ b/Minecraft_QQ/Minecraft_QQ.Code.csproj
@@ -88,11 +88,11 @@
     <Compile Include="Config\ConfigRead.cs" />
     <Compile Include="Config\ConfigShow.cs" />
     <Compile Include="Config\ConfigWrite.cs" />
-    <Compile Include="Form\SetWPF\QQSet.xaml.cs">
+    <Compile Include="SetWindow\QQSet.xaml.cs">
       <DependentUpon>QQSet.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Form\SetWPF\SetTran.cs" />
-    <Compile Include="Form\Window1.xaml.cs">
+    <Compile Include="SetWindow\SetTran.cs" />
+    <Compile Include="SetWindow\Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
     <Compile Include="IMinecraft_QQ.cs" />
@@ -107,10 +107,10 @@
     <Compile Include="MyMysql\MysqlSearchData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Send.cs" />
-    <Compile Include="Form\setform.cs">
+    <Compile Include="SetWindow\setform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\setform.designer.cs">
+    <Compile Include="SetWindow\setform.designer.cs">
       <DependentUpon>setform.cs</DependentUpon>
     </Compile>
     <Compile Include="MySocket\Message.cs" />
@@ -122,63 +122,62 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form\setform.resx">
+    <EmbeddedResource Include="SetWindow\setform.resx">
       <DependentUpon>setform.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Form\SetWPF\QQSet.xaml">
+    <Page Include="SetWindow\QQSet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Form\Style\Button.xaml">
+    <Page Include="SetWindow\Style\Button.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Style\CheckBox.xaml">
+    <Page Include="SetWindow\Style\CheckBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Style\ComboBox.xaml">
+    <Page Include="SetWindow\Style\ComboBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Style\Label.xaml">
+    <Page Include="SetWindow\Style\Label.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Style\ListView.xaml">
+    <Page Include="SetWindow\Style\ListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Form\Style\Slider.xaml">
+    <Page Include="SetWindow\Style\Slider.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Style\TabControl.xaml">
+    <Page Include="SetWindow\Style\TabControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Form\Style\TextBox.xaml">
+    <Page Include="SetWindow\Style\TextBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Form\Window1.xaml">
+    <Page Include="SetWindow\Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Form\icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Form\Minecraft_QQ.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Native.Sdk\Native.Sdk.csproj">
       <Project>{d7a958b3-79d9-49f8-8bb4-9619bab6ecba}</Project>
       <Name>Native.Sdk</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="img\icon.ico" />
+    <Resource Include="img\Minecraft_QQ.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
